--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,9 +1,10 @@
 <%- include('partials/header'); -%>
 <h1>Home</h1>
-<% for(var i=0;i<data.length;i++){ %>
-    <h3><%=data[i].title%></h3>
-    <p><%=data[i].input.substring(0,100)%>...
-    <a href="/posts/<%=data[i].title%>">Readmore</a>
+
+<% data.forEach(function(item) { %>
+    <h3><%=item.title%></h3>
+    <p><%=item.blogpost%>...
+    <a href="/posts/<%=item._id%>">Readmore</a>
     </p>
-<% } %>
+  <% }); %>
 <%- include('partials/footer'); -%>
