--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,4 +1,4 @@
 <%- include('partials/header'); -%>
-<h1><%= data[index].title %></h1>
-<p><%= data[index].input %></p>
+<h1><%= data.title %></h1>
+<p><%= data.blogpost %></p>
 <%- include('partials/footer'); -%>
